@startuml
class com.example.k23411teapp.model.Product {
- String productId
- String productName
- double price
- int quantity
- double coupon
- double VAT
- String categoryId
+ String getProductId()
+ void setProductId(String)
+ String getProductName()
+ void setProductName(String)
+ double getPrice()
+ void setPrice(double)
+ int getQuantity()
+ void setQuantity(int)
+ double getCoupon()
+ void setCoupon(double)
+ double getVAT()
+ void setVAT(double)
+ String getCategoryId()
+ void setCategoryId(String)
+ String toString()
}


class com.example.k23411teapp.model.Customer {
- String customerId
- String customerName
- String phoneNumber
- String email
+ String getCustomerId()
+ void setCustomerId(String)
+ String getCustomerName()
+ void setCustomerName(String)
+ String getPhoneNumber()
+ void setPhoneNumber(String)
+ String getEmail()
+ void setEmail(String)
+ String toString()
}


class com.example.k23411teapp.model.Employee {
- String id
- String name
- String departmentId
- String birthPlace
+ String getId()
+ void setId(String)
+ String getName()
+ void setName(String)
+ String getDepartmentId()
+ void setDepartmentId(String)
+ String getBirthPlace()
+ void setBirthPlace(String)
}


class com.example.k23411teapp.model.DataWarehouse {
+ {static} ArrayList<Catergory> getCategories()
+ {static} ArrayList<Department> getDepartments()
+ {static} ArrayList<Employee> getEmployees()
+ {static} ArrayList<Customer> getCustomers()
+ {static} ArrayList<Product> getProducts()
+ {static} ArrayList<Order> getOrders()
+ {static} ArrayList<OrderDetail> getOrderDetails()
}

class com.example.k23411teapp.model.Catergory {
- String categoryId
- String categoryName
+ String getCategoryId()
+ void setCategoryId(String)
+ String getCategoryName()
+ void setCategoryName(String)
+ String toString()
}


class com.example.k23411teapp.model.Department {
- String id
- String name
- ArrayList<Employee> ListOfEmployee
+ String getId()
+ void setId(String)
+ String getName()
+ void setName(String)
+ ArrayList<Employee> getListOfEmployee()
+ void addEmployee(Employee)
+ String toString()
}


class com.example.k23411teapp.model.Order {
- String orderId
- String customerId
- String id
- Date orderDate
+ String getOrderId()
+ void setOrderId(String)
+ String getCustomerId()
+ void setCustomerId(String)
+ String getId()
+ void setId(String)
+ Date getOrderDate()
+ void setOrderDate(Date)
+ String toString()
}


class com.example.k23411teapp.model.OrderDetail {
- String orderDetailId
- String orderId
- String productId
- int quantity
- double price
- double coupon
- double VAT
+ String getOrderDetailId()
+ void setOrderDetailId(String)
+ String getOrderId()
+ void setOrderId(String)
+ String getProductId()
+ void setProductId(String)
+ int getQuantity()
+ void setQuantity(int)
+ double getPrice()
+ void setPrice(double)
+ double getCoupon()
+ void setCoupon(double)
+ double getVAT()
+ void setVAT(double)
+ String toString()
}




java.io.Serializable <|.. com.example.k23411teapp.model.Product
java.io.Serializable <|.. com.example.k23411teapp.model.Customer
java.io.Serializable <|.. com.example.k23411teapp.model.Catergory
java.io.Serializable <|.. com.example.k23411teapp.model.Order
java.io.Serializable <|.. com.example.k23411teapp.model.OrderDetail
@enduml